--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
 }
     </style>
 </head>
-<body>    
+<body>
+    <div>
+        <img src="EverWeb.png" width="100px">  
+    </div>
 
     <header>              
         <h1 id="he">Welcome to Everking's World</h1>
