--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     </section>
 
     <div>
-        <a href="https://wa.me/233553105463">Click Here and chat me on WhatsApp</a>
+        <a href="https://wa.me/233553105463">Click here and chat me on WhatsApp</a>
     </div>
     
     <h2 id="iv">I Love to Code</h2>
