--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <li>A Professional Graphics Designer</li>
     </ol>
     <ul>
-        <li>"EVERKING" is not just a name; a REMINDER</li>
+        <li>"EVERKING" not just a name; a REMINDER</li>
         <li>Coded For Greatness</li>
         <li>"I don't chase Clout. I build legacy"</li>
     </ul>
