--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             text-align: center;
         }
         #he {
-            font-family: 'Times New Roman', Times, serif;
+            font-family: 'Amita', 'sans, serif';
             font-weight: bolder;
         }
         #hweb {
